[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/sprites/background.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/floor.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ceiling.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/shelf-short.png" type="Texture" id=6]
[ext_resource path="res://assets/music/fight-song.wav" type="AudioStream" id=7]
[ext_resource path="res://Panel.gd" type="Script" id=8]
[ext_resource path="res://Dialogue.gd" type="Script" id=9]
[ext_resource path="res://assets/Inconsolata-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://StartMessage.gd" type="Script" id=11]
[ext_resource path="res://Evidence.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/sprites/evidence.png" type="Texture" id=13]
[ext_resource path="res://assets/sfx/goon-laugh.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/collect.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sprites/heart.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/blue-heart.png" type="Texture" id=17]
[ext_resource path="res://GameOver.gd" type="Script" id=18]
[ext_resource path="res://StartScreen.gd" type="Script" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1600, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1600, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 800 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
size = 28
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.75 )
motion_mirroring = Vector2( 2400, 0 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 4, 4 )
z_index = -10
texture = ExtResource( 1 )

[node name="Barriers" type="Node2D" parent="."]

[node name="Floor" type="StaticBody2D" parent="Barriers"]
position = Vector2( 0, 1871 )
collision_layer = 8
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Barriers/Floor"]
scale = Vector2( 200, 200 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/Floor"]
position = Vector2( 0, -1590 )
shape = SubResource( 1 )

[node name="Ceiling" type="StaticBody2D" parent="Barriers"]
position = Vector2( 0, -1200 )
collision_layer = 8
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Barriers/Ceiling"]
scale = Vector2( 200, 100 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/Ceiling"]
position = Vector2( 0, 800 )
shape = SubResource( 2 )

[node name="WallLeft" type="StaticBody2D" parent="Barriers"]
position = Vector2( -1600, 0 )
collision_layer = 8
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Barriers/WallLeft"]
scale = Vector2( 100, 100 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/WallLeft"]
position = Vector2( 800, 0 )
shape = SubResource( 3 )

[node name="WallRight" type="StaticBody2D" parent="Barriers"]
position = Vector2( 1600, 0 )
collision_layer = 8
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Barriers/WallRight"]
scale = Vector2( 100, 100 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/WallRight"]
position = Vector2( -800, 0 )
shape = SubResource( 3 )

[node name="Shelfs" type="Node2D" parent="."]

[node name="ShortShelf" type="StaticBody2D" parent="Shelfs"]
position = Vector2( 105, 176 )
scale = Vector2( 5, 5 )
collision_layer = 4
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Shelfs/ShortShelf"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shelfs/ShortShelf"]
position = Vector2( 0, -12 )
shape = SubResource( 4 )

[node name="TallShelf" type="Node2D" parent="Shelfs"]
position = Vector2( 360, 0 )

[node name="BottomShelf" type="StaticBody2D" parent="Shelfs/TallShelf"]
position = Vector2( 105, 176 )
scale = Vector2( 5, 5 )
collision_layer = 4
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Shelfs/TallShelf/BottomShelf"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shelfs/TallShelf/BottomShelf"]
position = Vector2( 0, -12 )
shape = SubResource( 4 )

[node name="TopShelf" type="StaticBody2D" parent="Shelfs/TallShelf"]
position = Vector2( 105, 4 )
scale = Vector2( 5, 5 )
collision_layer = 4
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Shelfs/TallShelf/TopShelf"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shelfs/TallShelf/TopShelf"]
position = Vector2( 0, -12 )
shape = SubResource( 4 )

[node name="Crates" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -595.101, 227.876 )
scale = Vector2( 3, 3 )
z_index = 2
PLAYER_COLOR = "red"

[node name="StartingEvidence" parent="." instance=ExtResource( 12 )]
position = Vector2( -301, 243 )

[node name="GoonSpawner" type="Timer" parent="."]
wait_time = 5.0

[node name="GoonSpawn" type="Position2D" parent="."]
position = Vector2( 500, 50 )

[node name="FightMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )

[node name="GoonLaugh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="CollectSFX" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 15 )
volume_db = -10.0

[node name="HUD" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Panel" type="Panel" parent="HUD"]
self_modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Controls" type="Label" parent="HUD/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_right = -40.0
margin_bottom = -174.0
custom_fonts/font = SubResource( 5 )
text = "Controls:


Movement - Arrowkeys or W,A,D

Blocking - Down Arrow or S

Punching - CONTROL or F"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceInfo" type="Label" parent="HUD/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "Press SPACE to dismiss"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Panel" parent="HUD"]
visible = false
self_modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceInfo" type="Label" parent="HUD/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "Press SPACE to dismiss"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" type="Panel" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -300.0
margin_right = 400.0
margin_bottom = 300.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="HUD/StartScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "Welcome to Deeper & Deeper LLC,
the toughest legal firm around.  You and
your sister are out collecting some evidence
to put away a nasty crime boss.

Which sister will take on the search?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HUD/StartScreen"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_bottom = -100.0
grow_vertical = 0
rect_min_size = Vector2( 800, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BertaButton" type="Button" parent="HUD/StartScreen/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -10.0
margin_right = 300.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/StartScreen/Control/BertaButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 11 )
text = "Berta Deeper"
align = 1
valign = 1

[node name="RuthButton" type="Button" parent="HUD/StartScreen/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 500.0
margin_top = -10.0
margin_right = 700.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HUD/StartScreen/Control/RuthButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 11 )
text = "Ruth Deeper"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="Panel" parent="HUD"]
visible = false
self_modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -240.0
margin_right = 240.0
margin_bottom = -40.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Dialogue"]
anchor_right = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true

[node name="StartMessage" type="Label" parent="HUD"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -21.5
margin_right = 20.0
margin_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
text = "Press ESCAPE for
Controls"
align = 1
valign = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="HUD/StartMessage"]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/StartMessage"]
anims/fade = SubResource( 9 )

[node name="EvidenceCount" type="Label" parent="HUD"]
margin_left = 62.0
margin_top = 9.5
margin_right = 78.0
margin_bottom = 44.5
grow_vertical = 2
custom_fonts/font = SubResource( 10 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD/EvidenceCount"]
position = Vector2( -22, 16 )
scale = Vector2( 3, 3 )
texture = ExtResource( 13 )

[node name="HealthCount" type="Label" parent="HUD"]
margin_left = 62.0
margin_top = 66.0
margin_right = 78.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 10 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD/HealthCount"]
position = Vector2( -23, 16 )
scale = Vector2( 3, 3 )
texture = ExtResource( 16 )

[node name="BlueHealthCount" type="Label" parent="HUD"]
visible = false
margin_left = 62.0
margin_top = 120.0
margin_right = 78.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 10 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HUD/BlueHealthCount"]
position = Vector2( -23, 16 )
scale = Vector2( 3, 3 )
texture = ExtResource( 17 )

[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="collected" from="StartingEvidence" to="." method="_on_StartingEvidence_collected"]
[connection signal="timeout" from="GoonSpawner" to="." method="_on_GoonSpawner_timeout"]
[connection signal="pressed" from="HUD/StartScreen/Control/BertaButton" to="." method="_on_BertaButton_pressed"]
[connection signal="pressed" from="HUD/StartScreen/Control/RuthButton" to="." method="_on_RuthButton_pressed"]
[connection signal="start_game" from="HUD/Dialogue" to="." method="_on_Dialogue_start_game"]
[connection signal="timeout" from="HUD/StartMessage/Timer" to="HUD/StartMessage" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="HUD/StartMessage/AnimationPlayer" to="HUD/StartMessage" method="_on_AnimationPlayer_animation_finished"]
